--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
+# ─── arsenal core ────────────────────────────────────────────────────
 libtmux
 docutils
 pyperclip
 pyyaml
 pyfzf
+
+# kerberos / bh / ad
 impacket
 minikerberos
 bloodhound
 bloodyAD
 coercer
-lsassy
-mitm6
-drupwn
-sublist3r
